# BQ-Features

./: .gitignore  LICENSE  README.md  bq_features_config.yaml  bq_features_config.yaml.example  pyproject.toml  requirements.txt
bq_studio_demos/dataform/: README.md
bq_studio_demos/docs/: gemini-in-bigquery-studio.md  looker-bigquery-studio-demo.md
bq_studio_demos/docs/use_cases/: 01-load-raw-data-to-gcs.md  02-load-formatted-data-from-bq-datasets.md  03-explore-data-queries-and-ai.md  04-create-etls-gcs-to-bq-layers.md  05-include-stored-procedures-in-etls.md  06-share-version-etls.md  07-schedule-etls.md  08-monitor-etls.md  09-data-science-modelling.md  10-industrialize-data-science-models.md  README.md
bq_studio_demos/notebooks/: finance_analytics_demo.ipynb
bq_studio_demos/sql/: 01_portfolio_value.sql  02_returns_and_volatility.sql  03_pnl_by_strategy.sql  04_load_from_gcs.sql
doc/: README.md  big-query-features.md  code-writing-sharing.md  create-bq-repo-and-link-github.md
doc/features/1-studio/: analytics-ml.md  create-new.md  data-canvas.md  data-preparations.md  explorer.md  files.md  notebooks.md  pipelines.md  queries.md  repositories.md
doc/use_cases/: 01-load-raw-data-to-gcs.md  02-load-formatted-data-from-bq-datasets.md  03-explore-data-queries-and-ai.md  04-create-etls-gcs-to-bq-layers.md  05-include-stored-procedures-in-etls.md  06-share-version-etls.md  07-schedule-etls.md  08-monitor-etls.md  09-data-science-modelling.md  README.md
scripts/: upload_queries_to_studio.py
src/bq_features/: __init__.py  cli.py  docs_commands.py
(+34 files in other folders)
